<resources>
    <string name="app_name">TaskManagerApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_admin">If you are admin, Please Enter admin password</string>
    <string name="userneme">userneme</string>
    <string name="password">password</string>
    <string name="admin_code">admin code</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="input_check">Username or Password is not true format or is null</string>
    <string name="notify_pass_text">Password should be number</string>
    <string name="invalid_input">Invalid Information</string>
    <string name="new_title">New Title :</string>
    <string name="new_edit_text">new edit text</string>
    <string name="new_content">New Content :</string>
    <string name="new_date">New Date :</string>
    <string name="new_time">New Time :</string>
    <string name="new_state">New State :</string>
    <string name="todo">TODO</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="task_title">Task Title : </string>
    <string name="task_content">Task Content :</string>
    <string name="task_exist_date">Task Exist Date :</string>
    <string name="task_exist_time">Task Exist Time :</string>
    <string name="menu_text_delete_all">Delete All</string>
    <string name="menu_text_logout">Logout</string>
    <string name="search_title">search</string>
    <string name="search_hint">search</string>
    <string name="app_label">search task</string>
    <string name="user_exist">User Already Exist</string>
    <string name="cant_null">Username or password cant be null</string>
    <string name="numeric_pass">Password should be number</string>
    <string name="length_pass">"Password should be more than 8</string>
    <string name="search">Search</string>
    <string name="take_photo">take photo</string>
</resources>