<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/purple_light_border"
            android:hint="@string/userneme"
            android:padding="10dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/purple_dark_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/pad_10"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_admin"
        android:layout_margin="@dimen/mrg_5"
        android:textColor="@color/dark_purple"
        android:textSize="18sp"
        android:padding="@dimen/pad_10"
        android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/admin_pass"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/purple_so_light"
            android:hint="@string/admin_code"
            android:padding="@dimen/pad_10"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mrg_10"
            android:text="@string/sign_up"
            app:icon="@drawable/ic_sign" />


</LinearLayout>