<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/task_exist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_10"
            android:padding="@dimen/pad_10"
            android:text="@string/task_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exist_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:hint="@string/task_title"
            android:padding="@dimen/pad_10"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/task_exist_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_10"
            android:padding="@dimen/pad_5"
            android:text="@string/task_content"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exist_task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:hint="@string/task_content"
            android:padding="@dimen/pad_10"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exist_date_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_10"
            android:padding="@dimen/pad_5"
            android:text="@string/task_exist_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/date_picker_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exist_time_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_10"
            android:padding="@dimen/pad_5"
            android:text="@string/task_exist_time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/time_picker_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_10"
            android:gravity="right">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exist_dialog_ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mrg_10"
                android:text="@string/ok"
                app:icon="@drawable/ic_check" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exist_dialog_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mrg_10"
                android:text="@string/cancel"
                app:icon="@drawable/ic_close" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>