<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="214dp"
        android:layout_height="173dp"
        android:background="@drawable/login_img"
        android:layout_margin="@dimen/mrg_5"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/indigo_light_border"
            android:hint="@string/userneme"
            android:padding="10dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/indigo_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/pad_10"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:text="@string/login"
            app:icon="@drawable/ic_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:text="@string/sign_up"
            app:icon="@drawable/ic_sign" />
    </LinearLayout>

</LinearLayout>